example/lib/src/arbs/errors/app_th.arb
{
  "@@locale": "th",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "เกิดข้อผิดพลาด",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "เกิดข้อผิดพลาดที่ไม่คาดคิด",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "ส่งรายงานข้อผิดพลาดเรียบร้อยแล้ว.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}